--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,10 +4,12 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-1.jpg')"></div>
+            <div class="image w-100 h-100" style="background-image: url('/public/images/install/install-1.png')"></div>
             <div class="overlay w-100 h-100"></div>
             <div class="container">
                 <div class="row">
@@ -23,32 +25,64 @@
             </div>
         </div>
         <div class="carousel-item" >
-            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-2.jpg')"></div>
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-2.jpeg')"></div>
             <div class="overlay w-100 h-100"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-7">
                         <div class="text-container">
                             <h2>Business As Usual</h2>
-                            <h1>Landscaping and Snow Maintenance For Over 30 Years</h1>
-                            <p>A family-run operation specializing in all things landscaping, landscape design, and weather maintenance.</p>
-                            <a class="btn" href="/about">About Us</a>
+                            <h1>Landscape Design</h1>
+                            <p>With the latest in software programs, we can work alongside you to create the outdoor living space of your dreams. </p>
+                            <a class="btn" href="/services/landscape-design">View More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="carousel-item">
-            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-3.jpg')"></div>
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-3.png')"></div>
             <div class="overlay w-100 h-100"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-7">
                         <div class="text-container">
                             <h2>Business As Usual</h2>
-                            <h1>Landscaping and Snow Maintenance For Over 30 Years</h1>
-                            <p>A family-run operation specializing in all things landscaping, landscape design, and weather maintenance.</p>
-                            <a class="btn" href="/about">About Us</a>
+                            <h1>Landscape Installation</h1>
+                            <p>We only use the highest quality materials and are always above industry standard on our installation practices. </p>
+                            <a class="btn" href="/services/landscape-install">View More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-4.jpg')"></div>
+            <div class="overlay w-100 h-100"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-7">
+                        <div class="text-container">
+                            <h2>Business As Usual</h2>
+                            <h1>Lawn Maintenance</h1>
+                            <p>We have been owned and operated in Westlake for all 30 years and continue to do our best at beautifying our community one property at a time!  </p>
+                            <a class="btn" href="/services/lawn-maintenance">View More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-5.JPEG')"></div>
+            <div class="overlay w-100 h-100"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-7">
+                        <div class="text-container">
+                            <h2>Business As Usual</h2>
+                            <h1>Snow Removal & Ice Control</h1>
+                            <p>Using our fleet of trucks, machines, and staff we will keep your property accessible even during the worst storms.  </p>
+                            <a class="btn" href="/services/snow-removal">View More</a>
                         </div>
                     </div>
                 </div>
@@ -73,28 +107,28 @@
             <div class="col-12 col-lg-3">
                 <div class="card">
                     <img src="/public/images/star.svg" alt="star icon">
-                    <h2>Quality Service</h2>
+                    <h2>Quality </br>Service</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
                  <div class="card">
                     <img src="/public/images/expert.svg" alt="graduation cap icon">
-                    <h2>Expert Staff</h2>
+                    <h2>Expert </br>Staff</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
                  <div class="card">
                     <img src="/public/images/tree.svg" alt="tree icon">
-                    <h2>Local Resources</h2>
+                    <h2>Local </br>Resources</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
                 <div class="card">
                     <img src="/public/images/people.svg" alt="person icon">
-                    <h2>Customer Focused</h2>
+                    <h2>Customer </br>Focused</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
                 </div>
             </div>
@@ -136,21 +170,21 @@
         <div class="row d-lg-flex justify-content-lg-center">
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/lawn.jpg" alt="lawnmower">
+                    <img class="card-img-top" src="/public/images/lawn-maintenance/maint-1.png" alt="lawn maintenance">
                     <div class="card-body text-center">
                         <h5 class="card-title">Lawn Maintenance</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">With our Residential and Commercial weekly maintenance, our attention to detail makes all the difference.</p>
                         <a href="/services/lawn-maintenance" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/snow.png" alt="snow and ice">
+                    <img class="card-img-top" src="/public/images/install/install-1.png" alt="landscape installation">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Snow Removal & Ice Control</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/snow-removal" class="btn">Read More</a>
+                        <h5 class="card-title">Landscape Installtion</h5>
+                        <p class="card-text">Let us design your dream outdoor living space. After our consultation we will make imagination become reality!</p>
+                        <a href="/services/landscape-install" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -158,21 +192,21 @@
          <div class="row d-lg-flex justify-content-lg-center">
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/landscaping.png" alt="landscaping">
+                    <img class="card-img-top" src="/public/images/design/design-1.png" alt="landscape design">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Landscape Installtion</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/landscape-install" class="btn">Read More</a>
+                        <h5 class="card-title">Landscape </br>Design</h5>
+                        <p class="card-text">Between our award-winning crew of experts and the highest quality materials available, Business As Usual will leave you with an outdoor living space that you are proud to call home.</p>
+                        <a href="/services/landscape-design" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/design.png" alt="lawnmower">
+                    <img class="card-img-top" src="/public/images/snow/snow-1.jpeg" alt="snow and ice">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Landscape Design</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/landscape-design" class="btn">Read More</a>
+                        <h5 class="card-title">Snow Removal & Ice Control</h5>
+                        <p class="card-text">Commercial and Residential snow and ice management working around the clock. With the newest and best in class equipment, Business As Usual efficiently keeps your property safe and accessible 24/7.</p>
+                        <a href="/services/snow-removal" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
