--- a/views/landscape-design.handlebars
+++ b/views/landscape-design.handlebars
@@ -10,6 +10,77 @@
         </div>
     </div>
 </div>
+<div class="service-detail">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="other">Other Services</h6>
+                        <div class="links">
+                            <a href="/services/snow-removal">Snow Removal & Ice Control</a>
+                            <a href="/services/lawn-maintenance">Lawn Maintenance</a>
+                            <a href="/services/landscape-install">Landscape Installation</a>
+                        </div>
+                        <h6>Contact</h6>
+                        <div class="d-flex">
+                            <img src="/public/images/phone.svg" alt="phone icon">
+                            <a href="tel:4404526697"><h4>440-452-6697</h4></a>
+                        </div>
+                        <div class="d-flex">
+                             <img src="/public/images/mail.svg" alt="phone icon">
+                             <a href="mailto:cdddschlunt@adelphia.net"><h4>cdddschlunt@adelphia.net</h4></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/public/images/design/design-2.png" alt="landscape design">
+                        <h3>Landscape Design</h3>
+                        <p>Our landscape design turns your vision into a reality. After our consultation we will combine all of your ideas with our knowledge to provide you with the most functional and beautiful outdoor living space. Our state of the art programs allow us to do many types of designs from 3D walkthroughs of your new landscaping to a CAD design with accurate measurements for your landscaping down to the details of how irrigation and lighting will be run. Our designs are broken down into two main categories. </p>
+                        <p>Soft-Scape : This focuses on softening up your outdoor living space, included but not limited to:  Adding or removing shrubs, trees and flowers, creating new rock, mulch or planting beds, grading or drainage, and grass installation. The options, layouts, specifications and sizes never end!</p>
+                        <p>Hard-Scape: This focuses on creating permanent structures, included but not limited to: Paver and natural stone patios and walkways, retaining walls, fire pits, outdoor structures such as kitchens, water features such as ponds and riverbeds, irrigation systems, outdoor lighting systems and artificial turf installation. The options for colors, layouts and specifications never end!  </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/design/design-3.jpeg" alt="landscape design">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/design/design-4.jpeg" alt="landscape design">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Why Choose Us for Landscape Design?</h3>
+                        <p>With the latest in software programs, we can work alongside you to create the outdoor living space of your dreams. With our knowledge of landscape design we can help guide you through every step. We are committed to excellence and customer satisfaction which all starts from being on the same page with the same expectations. We will have your dream outdoor living space created for you to see before we ever start digging!  </p>
+                        <ul>
+                            <li>Experienced and knowledgeable with all plants and materials that we install</li>
+                            <li>We personally come out and measure and take pictures to try and give you the most accurately scaled design possible</li>
+                            <li>Most designs are made in 1-2 weeks </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/design/design-5.png" alt="landscape design">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/design/design-6.png" alt="landscape design">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <a href="/gallery"><h3>View More Photos In The Gallery!</h3></a>
+                        <p>In the gallery you will find many photos of our properties being maintained for the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our work and love to share the final product.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band darkgreen">
     <div class="container">
         <div class="row">
