--- a/views/landscape-installation.handlebars
+++ b/views/landscape-installation.handlebars
@@ -10,6 +10,79 @@
         </div>
     </div>
 </div>
+<div class="service-detail">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="other">Other Services</h6>
+                        <div class="links">
+                            <a href="/services/snow-removal">Snow Removal & Ice Control</a>
+                            <a href="/services/lawn-maintenance">Lawn Maintenance</a>
+                            <a href="/services/landscape-design">Landscape Design</a>
+                        </div>
+                        <h6>Contact</h6>
+                        <div class="d-flex">
+                            <img src="/public/images/phone.svg" alt="phone icon">
+                            <a href="tel:4404526697"><h4>440-452-6697</h4></a>
+                        </div>
+                        <div class="d-flex">
+                             <img src="/public/images/mail.svg" alt="phone icon">
+                             <a href="mailto:cdddschlunt@adelphia.net"><h4>cdddschlunt@adelphia.net</h4></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/public/images/install/install-2.jpeg" alt="landscape installation">
+                        <h3>Landscape Installation</h3>
+                        <p>Business As Usual provides landscape installation for jobs that take hours to projects that require machines and take weeks at a time. We provide installation services that are broken down into two categories. 
+                        </p>
+                        <p>Soft-Scape : This focuses on softening up your outdoor living space, included but not limited to:  Adding or removing shrubs, trees and flowers, creating new rock, mulch or planting beds, grading or drainage, and grass installation. The options, layouts, specifications and sizes never end!</p>
+                        <p>Hard-scape: This focuses on creating permanent structures, included but not limited to: Paver and natural stone patios and walkways, retaining walls, fire pits, outdoor structures such as kitchens, water features such as ponds and riverbeds, irrigation systems, outdoor lighting systems and artificial turf installation. The options for colors, layouts and specifications never end! </p>
+                        <p>IF YOU CAN DREAM IT, WE CAN CREATE IT </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/install/install-3.jpeg" alt="landscape installation">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/install/install-4.jpeg" alt="landscape installation">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Why Choose Us for Landscape Install?</h3>
+                        <p>Our passion is providing you with the highest quality installation possible. When we leave a project we want you to be 100% satisfied with the end result. We only use the highest quality materials and are always above industry standard on our installation practices.  </p>
+                        <ul>
+                            <li>Our communication is a huge part of customer satisfaction. You will never be left in the dark</li>
+                            <li>Highest quality materials, suppliers and installers</li>
+                            <li>New and well maintained equipment</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/install/install-5.jpeg" alt="landscape installation">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/install/install-6.jpeg" alt="landscape installation">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <a href="/gallery"><h3>View More Photos In The Gallery!</h3></a>
+                        <p>In the gallery you will find many photos of our properties being maintained for the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our work and love to share the final product.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
