--- a/views/lawn-maintenance.handlebars
+++ b/views/lawn-maintenance.handlebars
@@ -19,8 +19,8 @@
                         <h6 class="other">Other Services</h6>
                         <div class="links">
                             <a href="/services/snow-removal">Snow Removal & Ice Control</a>
-                            <a href="/services/landscape-install">Landscape Installationl</a>
-                            <a href="/services/snow-removal">Snow Removal</a>
+                            <a href="/services/landscape-install">Landscape Installation</a>
+                            <a href="/services/landscape-design">Landscape Design</a>
                         </div>
                         <h6>Contact</h6>
                         <div class="d-flex">
@@ -29,14 +29,60 @@
                         </div>
                         <div class="d-flex">
                              <img src="/public/images/mail.svg" alt="phone icon">
-                             <a href="mailto:"><h4>cdddschlunt@adelphia.net</h4></a>
+                             <a href="mailto:cdddschlunt@adelphia.net"><h4>cdddschlunt@adelphia.net</h4></a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-8">
-                <div class="content">
-                    
+            <div class="col-12 col-lg-8 content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/public/images/lawn-maintenance/maint-2.png" alt="lawn maintenance">
+                        <h3>Lawn Maintenance</h3>
+                        <p>Business As Usual brings the curb appeal that you home or business desires. We offer an array of services such as but not limited to,
+                        Weekly lawn care, spring and fall clean ups, mulching, bed edging, bed maintenance, and shrub and tree trimming
+                        </p>
+                        <p>Weekly lawn mowing includes mowing with high end commercial lawn mowers, trimming around all obstacles, edging all driveways and walkways and finally blowing off of all hard surfaces. All of our mowing crew members are very well trained and care about your property. Our staff is easily approachable and knowledgeable if you ever have any questions while they are on site. Crew members will arrive in our branded trucks with uniforms and be on time week to week.</p>
+                        <p>Spring and fall clean ups include removal of all leaves, sticks and any other debris. This can also include optional clean up of perennials and annuals. We can haul away any amount of material that is needed or if the city picks up your leaves we can leave them on the curb!</p>
+                        <p>Mulching is the easiest way to give your home a fresh start! We use triple shredded black or brown mulch that is the highest quality in the market. Your color will last through the entire year and help keep the weeds under control. We can offer the best prices in the area because of our bulk material bins at our shop located close by. We also offer mulch delivery if you would like to do it yourself. </p>
+                        <p>Bed Edging will be done to redefine your bed lines. We offer machine trenches and hand dug edges.</p>
+                        <p>Bed Maintenance will be done to remove any weeds or unwanted debris in your beds.</p>
+                        <p>Shrub and tree trimming will be done to keep the shape of your plants. This is critical to longevity and optimal plant growth in the future. Let our experienced staff keep your plants looking their best and staying healthy!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/lawn-maintenance/maint-3.jpeg" alt="lawn maintenance">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/lawn-maintenance/maint-4.jpeg" alt="lawn maintenance">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Why Choose Us for Lawn Maintenance?</h3>
+                        <p>At the end of the day it comes down to experience and knowledge of the industry. We have been in business for 30 years and have learned and educated our staff on how professionals take care of their customers. We have been owned and operated in Westlake for all 30 years and continue to do our best at beautifying our community one property at a time!  </p>
+                        <ul>
+                            <li>Our weekly schedule and consistency is second to none</li>
+                            <li>Experienced staff that take pride in their work</li>
+                            <li>New and well maintained equipment with back ups in case of emergencies</li>
+                            <li>All of our maintenance is done in house with zero subcontractors so you know who is actually servicing your property</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/lawn-maintenance/maint-5.jpeg" alt="lawn maintenance">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/lawn-maintenance/maint-6.png" alt="lawn maintenance">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <a href="/gallery"><h3>View More Photos In The Gallery!</h3></a>
+                        <p>In the gallery you will find many photos of our properties being maintained for the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our work and love to share the final product.</p>
+                    </div>
                 </div>
             </div>
         </div>
