--- a/views/service-landing.handlebars
+++ b/views/service-landing.handlebars
@@ -43,21 +43,21 @@
         <div class="row d-lg-flex justify-content-lg-center">
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/lawn.jpg" alt="lawnmower">
+                    <img class="card-img-top" src="/public/images/lawn-maintenance/maint-1.png" alt="lawn maintenance">
                     <div class="card-body text-center">
                         <h5 class="card-title">Lawn Maintenance</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">With our Residential and Commercial weekly maintenance, our attention to detail makes all the difference.</p>
                         <a href="/services/lawn-maintenance" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/snow.png" alt="snow and ice">
+                    <img class="card-img-top" src="/public/images/install/install-1.png" alt="landscape installation">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Snow Removal & Ice Control</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/snow-ice" class="btn">Read More</a>
+                        <h5 class="card-title">Landscape Installtion</h5>
+                        <p class="card-text">Let us design your dream outdoor living space. After our consultation we will make imagination become reality!</p>
+                        <a href="/services/landscape-install" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -65,21 +65,21 @@
          <div class="row d-lg-flex justify-content-lg-center">
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/landscaping.png" alt="landscaping">
+                    <img class="card-img-top" src="/public/images/design/design-1.png" alt="landscape design">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Landscape Installtion</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/landscape-install" class="btn">Read More</a>
+                        <h5 class="card-title">Landscape </br>Design</h5>
+                        <p class="card-text">Between our award-winning crew of experts and the highest quality materials available, Business As Usual will leave you with an outdoor living space that you are proud to call home.</p>
+                        <a href="/services/landscape-design" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" src="/public/images/design.png" alt="lawnmower">
+                    <img class="card-img-top" src="/public/images/snow/snow-1.jpeg" alt="snow and ice">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Landscape Design</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/landscape-design" class="btn">Read More</a>
+                        <h5 class="card-title">Snow Removal & Ice Control</h5>
+                        <p class="card-text">Commercial and Residential snow and ice management working around the clock. With the newest and best in class equipment, Business As Usual efficiently keeps your property safe and accessible 24/7.</p>
+                        <a href="/services/snow-removal" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
