--- a/views/snow-ice.handlebars
+++ b/views/snow-ice.handlebars
@@ -10,6 +10,77 @@
         </div>
     </div>
 </div>
+<div class="service-detail">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="other">Other Services</h6>
+                        <div class="links">
+                            <a href="/services/landscape-design">Landscape Design</a>
+                            <a href="/services/lawn-maintenance">Lawn Maintenance</a>
+                            <a href="/services/landscape-install">Landscape Installation</a>
+                        </div>
+                        <h6>Contact</h6>
+                        <div class="d-flex">
+                            <img src="/public/images/phone.svg" alt="phone icon">
+                            <a href="tel:4404526697"><h4>440-452-6697</h4></a>
+                        </div>
+                        <div class="d-flex">
+                             <img src="/public/images/mail.svg" alt="phone icon">
+                             <a href="mailto:cdddschlunt@adelphia.net"><h4>cdddschlunt@adelphia.net</h4></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/public/images/snow/snow-2.jpeg" alt="snow and ice management">
+                        <h3>Snow Removal and Ice Control</h3>
+                        <p>Snow removal is available 24/7, we are on standby all winter long for any storms and lake effect snow.. Using our fleet of trucks, machines, and staff we will keep your property accessible even during the worst storms.  </p>
+                        <p>Commercial lots such as, Industrial, Healthcare, HOA’s,etc come with a zero to two inch tolerance clause within  contracts. Ice control is also available 24/7. With our own personal company salt dome we can keep your customers, staff and cars from slipping and sliding. </p>
+                        <p> Residential driveways and lots come with a one to two inch tolerance clause within contracts.   </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/snow/snow-3.png" alt="snow and ice management">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/snow/snow-4.png" alt="snow and ice management">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Why Choose Us for Snow Removal and Ice Control?</h3>
+                        <p>With over 30 years of experience, we have seen everything mother nature can bring to Ohio. From the worst snowstorms and blizzards to parking lots being completely covered in ice - we can handle it all.  Our experienced staff will keep you safe and clear! We have all the necessary equipment from trucks with snow plows and salters to loaders and sidewalk machines. </p>
+                        <ul>
+                            <li>Our own personal salt dome with forty thousand pounds of salt</li>
+                            <li>New and well maintained equipment with back ups in case of emergencies</li>
+                            <li>All of our snow is done in house with zero subcontractors so you know who is actually servicing your property </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/snow/snow-5.png" alt="snow and ice management">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <img src="/public/images/snow/snow-6.jpeg" alt="snow and ice management">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <a href="/gallery"><h3>View More Photos In The Gallery!</h3></a>
+                        <p>In the gallery you will find many photos of our properties being maintained for the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our work and love to share the final product.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
