--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,7 +107,11 @@ body .navbar .navbar-brand img {
     width: 70px;
 }
 
-
+@media (max-width: 991px) {
+    body .navbar .navbar-brand img {
+        margin-left: 22px;
+    }
+}
 
 .navbar .navbar-nav .nav-link {
     font-size: 22px;
@@ -333,6 +337,7 @@ body .navbar .navbar-brand img {
     line-height: 55px;
     margin-bottom: 0rem;
     font-weight: 400;
+    color: white;
 }
 
 .carousel-homepage .carousel-control-prev {
@@ -461,11 +466,6 @@ body .navbar .navbar-brand img {
     filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(347deg) brightness(101%) contrast(101%);
 }
 
-@media (min-width: 992px) {
-    .espot-homepage h2 {
-        max-width: 155px;
-    }
-}
 
 /* Homepage Two Column */
 
@@ -607,6 +607,8 @@ body .navbar .navbar-brand img {
 .services-landing .card .card-img-top {
     border-top-left-radius: 26px;
     border-top-right-radius: 26px;
+    height: 200px;
+    object-fit: cover;
 }
 .services-landing .card .card-body {
     background: white;
@@ -1096,4 +1098,129 @@ body .navbar .navbar-brand img {
     height: 200px;
     object-fit: cover;
     margin-bottom: 1.5rem;
+}
+
+.service-detail {
+    padding: 68px 0 50px;
+}
+
+.service-detail .card {
+    background-color:#EDF7F0;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
+}
+.service-detail h6 {
+    font-size: 22px;
+    letter-spacing: 0.25px;
+    line-height: 55px;
+    color: #0A1F0F;
+    position: relative;
+    margin-bottom: 1.5rem;
+}
+.service-detail .other::before {
+    content: '';
+    display: inline-block;
+    height: 3px;
+    width: 19px;
+    background-color: #0a1F0E;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.service-detail .other::after {
+    content: '';
+    display: inline-block;
+    height: 3px;
+    width: 40px;
+    background-color: #0a1F0E;
+    position: absolute;
+    bottom: 0;
+    left: 35px;
+}
+.service-detail h6:not(.other)::before {
+    content: '';
+    display: inline-block;
+    height: 3px;
+    width: 40px;
+    background-color: #0A1F0E;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.service-detail .links a {
+    display: block;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.2px;
+    color: #0A1F0E;
+    padding: 16px 18px 6px;
+    border-bottom: 1px solid #176225;
+    position: relative;
+}
+.service-detail .links {
+    margin-bottom: 1.5rem;
+}
+.service-detail .links a::before {
+    content: '';
+    display: inline-block;
+    height: 15px;
+    width: 9px;
+    background-image: url('/public/images/chevron.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    left: 0;
+}
+.service-detail .card-body img {
+    width: 24px;
+    height: 24px;
+    margin-right: 12px;
+}
+
+.service-detail .card-body .d-flex h4 {
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    line-height: 21px;
+    color: #0A1F0F;
+    margin-bottom: 1rem;
+}
+.service-detail .content img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    margin-bottom: 1rem;
+}
+.service-detail .content .col-lg-6 {
+    margin-top: 1rem;
+}
+.service-detail .content h3 {
+    font-size: 26px;
+    letter-spacing: 0.3px;
+    line-height: 34px;
+    color: #0a1F0E;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+.service-detail .content p,
+.service-detail .content li {
+    font-size: 19px;
+    letter-spacing: 0.22px;
+    line-height: 23px;
+    color: #0a1F0E;
+    font-weight:400;
+}
+.service-detail .content li {
+    padding-left: 12px;
+}
+.service-detail .content li::marker {
+    content: '✔';
+    padding-right: 12px;
+    font-size: 18px;
+    color: #0F4319;
+}
+@media (max-width: 991px) {
+    .service-detail .content {
+        margin-top: 2rem;
+    }
 }
