--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -43,7 +43,7 @@
              <div class="col-12 col-lg-3">
                 <div class="text-container">
                     <h3>Snow Removal & Ice Control</h3>
-                    <a class="btn" href="/services/snow-ice">View Page</a>
+                    <a class="btn" href="/services/snow-removal">View Page</a>
                 </div>
             </div>
              <div class="col-12 col-lg-3">
