--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -108,28 +108,28 @@
                 <div class="card">
                     <img src="/public/images/star.svg" alt="star icon">
                     <h2>Quality </br>Service</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                    <p>The level of care and attention we deliver to our customers truly sets us apart from other landscaping companies.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
                  <div class="card">
                     <img src="/public/images/expert.svg" alt="graduation cap icon">
                     <h2>Expert </br>Staff</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                    <p>Our snow and landscaping team is very experienced and educated in all materials and equipment we work with.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
                  <div class="card">
                     <img src="/public/images/tree.svg" alt="tree icon">
                     <h2>Local </br>Resources</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                    <p>We're not just your landscaping company, we're also your neighbor. We know what works for Northeast Ohio.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
                 <div class="card">
                     <img src="/public/images/people.svg" alt="person icon">
                     <h2>Customer </br>Focused</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                    <p>Our constant communication will leave you confident about the state of your project at any interval.</p>
                 </div>
             </div>
         </div>
